<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/content" />

    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_pager">

        <View
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:background="@color/background"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageUserDetail"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_launcher_background"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"/>
            </RelativeLayout>

            <TextView
                android:id="@+id/tvNameUserDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/name_user"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginTop="9dp"/>

            <TextView
                android:id="@+id/tvUsernameDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/username"
                android:textColor="@color/white"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginEnd="5dp">
                    <ImageView
                        android:contentDescription="logo_work"
                        android:layout_width="13dp"
                        android:layout_height="13dp"
                        android:layout_marginEnd="5dp"
                        android:src="@drawable/ic_baseline_work_24"/>
                    <TextView
                        android:id="@+id/company"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="10sp"
                        android:text="@string/name_company"
                        android:textColor="@color/white"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:contentDescription="logo_location"
                        android:layout_width="13dp"
                        android:layout_height="13dp"
                        android:layout_marginEnd="5dp"
                        android:src="@drawable/ic_baseline_location_on_24"/>
                    <TextView
                        android:id="@+id/location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="10sp"
                        android:text="@string/location"
                        android:textColor="@color/white"/>
                </LinearLayout>


            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="5dp"
                        android:baselineAligned="false">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:gravity="center_horizontal">

                            <TextView
                                android:id="@+id/followingNumber"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="18sp"
                                android:textStyle="bold"
                                android:gravity="center"
                                android:textColor="@color/background"
                                android:text="@string/following_number"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:gravity="center_horizontal">

                            <TextView
                                android:id="@+id/followerNumber"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="18sp"
                                android:textStyle="bold"
                                android:gravity="center"
                                android:textColor="@color/background"
                                android:text="@string/follower_number"/>
                        </LinearLayout>
                    </LinearLayout>

                    <com.google.android.material.tabs.TabLayout
                        android:id="@+id/tabLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        app:tabTextColor="@color/background"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/favoriteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/background"
        android:src="@drawable/ic_baseline_favorite_24_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"/>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="43dp" />

</androidx.constraintlayout.widget.ConstraintLayout>